# hannibal

./: .rules  CHANGELOG.md  Cargo.toml  README.md  bumpversion.sh  codebook.toml  deny.toml  how_hannibal_works.md  justfile  todo.md
.config/: nextest.toml
.github/workflows/: build_test.yml  ci.yml  ci_cd.yml  pull-request.yml  release.yml  tests.yml
crates/hannibal/: Cargo.toml
crates/hannibal-derive/: Cargo.toml
crates/hannibal-derive/src/: lib.rs
crates/hannibal/examples/: broker.rs  children.rs  intervals.rs  owning_addr.rs  ping.rs  signal-service.rs  simple-channels-only.rs  storage-service.rs  timeout.rs
crates/hannibal/src/: addr.rs  channel.rs  context.rs  environment.rs  error.rs  handler.rs  lib.rs  runtime.rs
crates/hannibal/src/actor/: build.rs
crates/hannibal/src/addr/: sender.rs
examples/: async.rs  axum-ws-actor.rs  bounded_actor.rs  broker.rs  builder.rs  caller.rs  callers.rs  children.rs  complex_ping.rs  custom_spawner.rs  drop.rs  empty.rs  from_environment.rs  intervals.rs  macros.rs  main.rs  non_send_tasks.rs  owning_addr.rs  panics.rs  ping.rs  process-actor.rs  runtime-service.rs  runtimes.rs  signal-service.rs  signal_deadlock.rs  simple-channels-only.rs  simple-service.rs  simple.rs  stop.rs  stopping.rs  storage-service.rs  streams.rs  streams_collector.rs  subscriber.rs  supervisor_clear_interval.rs  supervisor_clear_send_later.rs  tasks.rs  time-service.rs  timeout.rs  tokio.rs  (+2 more)
hannibal-derive/: Cargo.toml
hannibal-derive/src/: lib.rs
hannibal-examples/: Cargo.toml
hannibal-examples/src/: axum-ws-actor.rs
hannibal-threads/: Cargo.toml
hannibal-threads/examples/: simple.rs
hannibal-threads/src/: actor.rs  addr.rs  channel.rs  context.rs  error.rs  event_loop.rs  handler.rs  lib.rs  payload.rs  sender.rs
minibal-derive/: Cargo.toml
minibal-derive/src/: lib.rs
src/: actor.rs  addr.rs  async_addr.rs  async_context.rs  async_event_loop.rs  async_sender.rs  broker.rs  caller.rs  channel.rs  channel_wrapper.rs  context.rs  environment.rs  error.rs  event_loop.rs  handler.rs  lib.rs  lifecycle.rs  messages.rs  payload.rs  runtime.rs  sender.rs  service.rs  signals.rs  supervisor.rs  weak_addr.rs
src/actor/: build.rs  builder.rs  handle.rs  restart_strategy.rs  service.rs  spawn_strategy.rs  spawnable.rs  spawner.rs
src/actor/spawner/: actor_handle.rs  async_spawner.rs  smol_spawner.rs  tokio_spawner.rs
src/addr/: addr_future.rs  caller.rs  mod.rs  sender.rs  tester.rs  tests.rs  weak_addr.rs  weak_caller.rs  weak_sender.rs
src/channel/: ac.rs  fc.rs
src/context/: context_id.rs  core.rs  task_id.rs  test_interval_cleanup.rs
src/environment/: mod.rs  payload.rs  restart_strategy.rs
src/non_blocking/: addr.rs  context.rs  event_loop.rs  mod.rs  sender.rs
tests/: builder.rs  caller.rs  interval_overload.rs  panic_handling.rs  stop.rs  task_gc.rs  test_addr.rs
tests/fails/: builder_cant_be_restartable.rs  builder_cant_recreate_streamhandler.rs  builder_cant_recreate_streamhandler.stderr
