[package]
name = "hannibal"
version = "0.12.0-rc.3"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
license = "MIT/Apache-2.0"

description = "A small actor library"
documentation = "https://docs.rs/hannibal/"
homepage = "https://github.com/hoodie/hannibal"
keywords = ["actor", "async"]
categories = ["date-and-time", "data-structures", "parsing"]


readme = "README.md"
edition = "2024"
rust-version = "1.85"

[workspace]
members = ["hannibal-derive"]

[dependencies]
thiserror = "2.0"
futures = { version = "0.3" }
async-lock = "3"

dyn-clone = "1.0"

tokio = { version = "1.43", features = ["full"], optional = true }
smol = { version = "2", optional = true }
smol-macros = { version = "0.1", optional = true }
macro_rules_attribute = { version = "0.2", optional = true }
async-std = { version = "1.13.0", optional = true }

cfg-if = "1.0.0"
futures-timer = "3"
log = { version = "0.4", features = ["kv"] }
hannibal-derive = { path = "hannibal-derive", version = "0.12.0-rc.3" }

[dev-dependencies]
# TODO: make tokio optional
tokio = { version = "1", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
async-signals = "0.5.0"
futures-executor = { version = "0.3", features = ["thread-pool"] }
libc = "0.2"
trybuild = "1"
test-log = "0.2"
env_logger = { version = "0.11", features = ["unstable-kv"] }
color-backtrace = "0.7"

[features]
default = [
    "tokio_runtime",
    # "async_runtime",
    # "smol_runtime",
]
tokio_runtime = ["tokio", "runtime"]
smol_runtime = ["smol", "smol-macros", "macro_rules_attribute", "runtime"]
async_runtime = ["async-std", "runtime"]
runtime = []

[[example]]
name = "simple"
path = "examples/simple.rs"
required-features = ["runtime"]

[[example]]
name = "ping"
path = "examples/ping.rs"
required-features = ["runtime"]

[[example]]
name = "simple-channels-only"
path = "examples/simple-channels-only.rs"
required-features = ["tokio"]

[[example]]
name = "broker"
path = "examples/broker.rs"
required-features = ["runtime"]

[[example]]
name = "builder"
path = "examples/builder.rs"
required-features = ["runtime"]

[[example]]
name = "children"
path = "examples/children.rs"
required-features = ["runtime"]

[[example]]
name = "owning_addr"
path = "examples/owning_addr.rs"
required-features = ["runtime"]

[[example]]
name = "timeout"
path = "examples/timeout.rs"
required-features = ["runtime"]

[[example]]
name = "intervals"
path = "examples/intervals.rs"
required-features = ["runtime"]

[[example]]
name = "streams"
path = "examples/streams.rs"
required-features = ["runtime"]

[[example]]
name = "custom_spawner"
path = "examples/custom_spawner.rs"

[[example]]
name = "storage-service"
path = "examples/storage-service.rs"
required-features = ["runtime"]

[[example]]
name = "time-service"
path = "examples/time-service.rs"
required-features = ["runtime"]

[[example]]
name = "signal-service"
path = "examples/signal-service.rs"
required-features = ["runtime"]

[lints.rust]
unsafe_code = "forbid"
trivial_numeric_casts = "forbid"
unused_import_braces = "forbid"
missing_copy_implementations = "warn"
# missing_debug_implementations = "warn"
# missing_docs = "warn"
trivial_casts = "warn"
unstable_features = "warn"

[lints.clippy]
doc_markdown = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
clone_on_ref_ptr = "warn"
complexity = "warn"
correctness = "warn"
dbg_macro = "warn"
expect_used = "warn"
indexing_slicing = "warn"
manual_filter_map = "warn"
map_clone = "warn"
missing_const_for_fn = "warn"
missing_panics_doc = "warn"
needless_collect = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
style = "warn"
too_many_arguments = "warn"
useless_format = "warn"
