[workspace]
resolver = "3"
members = [
    "crates/hannibal",
    "crates/hannibal-derive",

]

[workspace.package]
name = "hannibal"
version = "0.12.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
license = "MIT/Apache-2.0"

readme = "README.md"
edition = "2024"
rust-version = "1.86"

documentation = "https://docs.rs/hannibal/"
homepage = "https://github.com/hoodie/hannibal"
keywords = ["actor", "actor-model"]

[workspace.dependencies]
hannibal-derive = "0.12.0"
