[package]
name = "hannibal-derive"
version = "0.12.0-rc.3"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
license = "MIT/Apache-2.0"

description = "A small actor library"
documentation = "https://docs.rs/hannibal/"
homepage = "https://github.com/hoodie/hannibal"
keywords = ["actor", "async"]
categories = ["date-and-time", "data-structures", "parsing"]


readme = "../README.md"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
