[package]
name = "hannibal-derive"
version = "0.16.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
license = "MIT/Apache-2.0"

description = "A small actor library"
documentation = "https://docs.rs/hannibal/"
homepage = "https://github.com/hoodie/hannibal"
repository = "https://github.com/hoodie/hannibal"
keywords = ["actor", "derive"]


readme = "../README.md"
edition = "2024"
rust-version = "1.86"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "3.4"

[dependencies.syn]
version = "2"
features = ["full"]
