[package]
name = "hannibal-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3"
tokio = { version = "1", features = ["full"], optional = true }
async-net= { version = "2.0.0", optional = true }
async-global-executor = { version = "3", optional = true }
env_logger = "0.11"
log = "0.4"
hannibal = { path = "../" }

[features]
default = ["async_runtime"]
tokio_runtime = ["hannibal/tokio_runtime", "dep:tokio"]
async_runtime = ["hannibal/async_runtime", "dep:async-net"]

[[bin]]
name = "axum-ws-actor"
path = "src/axum-ws-actor.rs"
