[package]
name = "hannibal-derive"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace =true
keywords.workspace = true
documentation.workspace = true

description = "A small actor library"
categories = ["date-and-time", "data-structures", "parsing"]


readme = "../README.md"
edition = "2024"
rust-version = "1.85"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "2"
features = ["full"]
